--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,16 @@ form button {
   font-size: 2rem;
   box-sizing: border-box;
   transition: all 1s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media only screen and (min-width: 1024px) {
+  .selection button {
+    margin: 0.5rem;
+    width: 15rem;
+    height: 5rem;
+  }
 }
 
 .selection button:active {
